--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri-dev": "tauri dev"
   },
   "dependencies": {
-    "vue": "^3.3.4",
     "@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0"
+    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "vue": "^3.3.4",
+    "vue-advanced-chat": "^2.0.11"
   },
   "devDependencies": {
+    "@tauri-apps/cli": ">=2.0.0-beta.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "internal-ip": "^7.0.0",
+    "sass": "^1.72.0",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.5",
-    "@tauri-apps/cli": ">=2.0.0-beta.0",
-    "internal-ip": "^7.0.0"
+    "vue-tsc": "^1.8.5"
   }
 }
